@@ -3,9 +3,18 @@ package com.kdb.it.domain.budget.project.service;
 import com.kdb.it.domain.budget.project.entity.Bprojm;
 import com.kdb.it.domain.budget.project.dto.ProjectDto;
 import com.kdb.it.domain.budget.project.repository.ProjectRepository;
+import com.kdb.it.common.approval.dto.ApplicationInfoDto;
+import com.kdb.it.common.approval.entity.Cappla;
+import com.kdb.it.common.approval.entity.Capplm;
+import com.kdb.it.common.approval.entity.Cdecim;
+import com.kdb.it.common.iam.entity.CorgnI;
+import com.kdb.it.common.iam.entity.CuserI;
 import com.kdb.it.common.system.security.CustomUserDetails;
 import com.kdb.it.common.util.HtmlSanitizer;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -71,8 +80,14 @@ public class ProjectService {
     /** 사용자 정보 리포지토리 (TAAABB_CUSERI): 사원번호→사용자명 조회용 */
     private final com.kdb.it.common.iam.repository.UserRepository cuserIRepository;
 
-    /** 결재 정보 리포지토리 (TAAABB_CDECIM): 결재선 목록 조회용 */
+    /** 결재 정보 리포지토�� (TAAABB_CDECIM): 결재선 목록 조회용 */
     private final com.kdb.it.common.approval.repository.ApproverRepository cdecimRepository;
+
+    /** 공통코드 리포지토리 (TAAABB_CCODEM): 비목코드 → 자본예산/일반관리비 구분용 */
+    private final com.kdb.it.common.code.repository.CodeRepository ccodemRepository;
+
+    /** 공통코드 서비스: 예산 신청 기간 검증용 */
+    private final com.kdb.it.common.code.service.CodeService codeService;
 
     /**
      * 전체 정보화사업 목록 조회
@@ -89,18 +104,12 @@ public class ProjectService {
      * @return 전체 정보화사업 응답 DTO 목록 (신청서 정보 포함, 품목 제외)
      */
     public List<ProjectDto.Response> getProjectList() {
-        return projectRepository.findAllByDelYn("N").stream()
-                .map(project -> {
-                    ProjectDto.Response response = ProjectDto.Response.fromEntity(project);
-                    // 각 프로젝트의 최신 신청서 정보(신청관리번호, 결재상태) 조회 및 설정
-                    setApplicationInfo(response, project.getPrjMngNo(), project.getPrjSno());
-                    // 부서코드→부서명, 사원번호→사용자명 조회 및 설정
-                    setCodeNames(response);
-                    // 품목 기준 자본예산/일반관리비 합계 계산 및 설정
-                    setBudgetSummary(response, project.getPrjMngNo(), project.getPrjSno());
-                    return response;
-                })
-                .toList();
+        List<Bprojm> projects = projectRepository.findAllByDelYn("N");
+        List<ProjectDto.Response> responses = projects.stream()
+                .map(ProjectDto.Response::fromEntity)
+                .collect(Collectors.toList());
+        enrichProjectListBatch(projects, responses);
+        return responses;
     }
 
     /**
@@ -124,22 +133,16 @@ public class ProjectService {
      * 목록 조회에서는 품목(Bitemm) 정보를 포함하지 않습니다 (성능 최적화).
      * </p>
      *
-     * @param condition 검색 조건 DTO (apfSts, prjYy, prjSts, prjTp, itDpm, svnDpm)
+     * @param condition 검색 조건 DTO (apfSts, bgYy, prjSts, prjTp, itDpm, svnDpm)
      * @return 조건에 맞는 정보화사업 응답 DTO 목록 (신청서 정보 포함, 품목 제외)
      */
     public List<ProjectDto.Response> searchProjectList(ProjectDto.SearchCondition condition) {
-        return projectRepository.searchByCondition(condition).stream()
-                .map(project -> {
-                    ProjectDto.Response response = ProjectDto.Response.fromEntity(project);
-                    // 각 프로젝트의 최신 신청서 정보(신청관리번호, 결재상태) 조회 및 설정
-                    setApplicationInfo(response, project.getPrjMngNo(), project.getPrjSno());
-                    // 부서코드→부서명, 사원번호→사용자명 조회 및 설정
-                    setCodeNames(response);
-                    // 품목 기준 자본예산/일반관리비 합계 계산 및 설정
-                    setBudgetSummary(response, project.getPrjMngNo(), project.getPrjSno());
-                    return response;
-                })
-                .toList();
+        List<Bprojm> projects = projectRepository.searchByCondition(condition);
+        List<ProjectDto.Response> responses = projects.stream()
+                .map(ProjectDto.Response::fromEntity)
+                .collect(Collectors.toList());
+        enrichProjectListBatch(projects, responses);
+        return responses;
     }
 
     /**
@@ -194,9 +197,9 @@ public class ProjectService {
      * 자동 채번 로직:
      * </p>
      * <ul>
-     * <li>요청 객체에 사업연도({@code prjYy})가 없으면 현재 연도를 사용합니다.</li>
+     * <li>요청 객체에 사업연도({@code bgYy})가 없으면 현재 연도를 사용합니다.</li>
      * <li>데이터베이스 시퀀스({@code SQ_PRJMNGNO})에서 다음 값을 가져옵니다.</li>
-     * <li>관리번호 자동 생성 형식: {@code PRJ-{prjYy}-{seq:04d}}
+     * <li>관리번호 자동 생성 형식: {@code PRJ-{bgYy}-{seq:04d}}
      * (예: {@code PRJ-2026-0001})</li>
      * </ul>
      * 예: {@code PRJ-2026-0001}
@@ -208,6 +211,9 @@ public class ProjectService {
      */
     @Transactional
     public String createProject(ProjectDto.CreateRequest request) {
+        // 예산 신청 기간 검증 (기간 외 → 400 Bad Request)
+        codeService.validateBudgetPeriod();
+
         String prjMngNo = request.getPrjMngNo();
 
         // 프로젝트관리번호가 없으면 자동 채번
@@ -215,13 +221,13 @@ public class ProjectService {
             Long nextVal = projectRepository.getNextSequenceValue(); // Oracle 시퀀스 채번
 
             // 사업연도 결정 (요청값 없으면 현재 연도 사용)
-            String year = request.getPrjYy();
+            String year = request.getBgYy();
             if (year == null || year.isEmpty()) {
                 year = String.valueOf(java.time.LocalDate.now().getYear());
-                request.setPrjYy(year);
+                request.setBgYy(year);
             }
 
-            // 형식: PRJ-{prjYy}-{seq:04d}
+            // 형식: PRJ-{bgYy}-{seq:04d}
             prjMngNo = String.format("PRJ-%s-%04d", year, nextVal);
             request.setPrjMngNo(prjMngNo);
 
@@ -307,6 +313,9 @@ public class ProjectService {
      */
     @Transactional
     public String updateProject(String prjMngNo, ProjectDto.UpdateRequest request) {
+        // 예산 신청 기간 검증 (기간 외 → 400 Bad Request)
+        codeService.validateBudgetPeriod();
+
         // 프로젝트 조회 (삭제되지 않은 항목만)
         Bprojm project = projectRepository.findByPrjMngNoAndDelYn(prjMngNo, "N")
                 .orElseThrow(() -> new IllegalArgumentException("Project not found with id: " + prjMngNo));
@@ -343,7 +352,6 @@ public class ProjectService {
                 request.getItDpmTlr(), // IT부서담당팀장
                 request.getEdrt(), // 전결권
                 request.getPrjDes(), // 사업설명
-                request.getPulRsn(), // 추진사유
                 request.getSaf(), // 현황
                 request.getNcs(), // 필요성
                 request.getXptEff(), // 기대효과
@@ -359,10 +367,10 @@ public class ProjectService {
                 request.getRprSts(), // 보고상태
                 request.getPrjPulPtt(), // 프로젝트추진가능성
                 request.getPrjSts(), // 프로젝트상태
-                request.getPrjYy(), // 사업연도
+                request.getBgYy(), // 사업연도
                 request.getSvnHdq(), // 주관본부/부문
                 request.getOrnYn(), // 경상여부
-                request.getPrjDtt()); // 사업구분
+                request.getPulDtt()); // 사업구분
 
         // ===== 품목 정보 동기화 (CUD) =====
         if (request.getItems() != null) {
@@ -474,6 +482,9 @@ public class ProjectService {
      */
     @Transactional
     public void deleteProject(String prjMngNo) {
+        // 예산 신청 기간 검증 (기간 외 → 400 Bad Request)
+        codeService.validateBudgetPeriod();
+
         // 프로젝트 조회 (삭제되지 않은 항목만)
         Bprojm project = projectRepository.findByPrjMngNoAndDelYn(prjMngNo, "N")
                 .orElseThrow(() -> new IllegalArgumentException("Project not found with id: " + prjMngNo));
@@ -546,6 +557,83 @@ public class ProjectService {
      * @param prjMngNo 프로젝트관리번호
      * @param prjSno   프로젝트순번
      */
+    /**
+     * 프로젝트 목록 응답에 신청서 정보·코드명·예산 합계를 배치로 주입 (N+1 방지)
+     *
+     * <p>
+     * 개별 조회(N×8 쿼리) 대신 배치 조회(5 쿼리)로 처리합니다:
+     * CAPPLA 1회, CAPPLM 1회, CDECIM 1회, CORGNI 1회, CUSERI 1회.
+     * </p>
+     */
+    private void enrichProjectListBatch(List<Bprojm> projects, List<ProjectDto.Response> responses) {
+        if (projects.isEmpty()) return;
+
+        // --- 1. CAPPLA 배치 조회 (BPROJM에 연결된 모든 신청서) ---
+        List<String> prjMngNos = projects.stream().map(Bprojm::getPrjMngNo).collect(Collectors.toList());
+        List<Cappla> allCapplas = capplaRepository.findByOrcTbCdAndOrcPkVlInOrderByApfRelSnoDesc("BPROJM", prjMngNos);
+
+        // prjMngNo → 최신 Cappla (이미 DESC 정렬이므로 첫 번째가 최신)
+        Map<String, Cappla> latestCappla = new java.util.LinkedHashMap<>();
+        for (Cappla c : allCapplas) {
+            latestCappla.putIfAbsent(c.getOrcPkVl(), c);
+        }
+
+        // --- 2. CAPPLM 배치 조회 ---
+        List<String> apfMngNos = latestCappla.values().stream()
+                .map(Cappla::getApfMngNo).collect(Collectors.toList());
+        Map<String, Capplm> capplmMap = capplmRepository.findAllById(apfMngNos).stream()
+                .collect(Collectors.toMap(Capplm::getApfMngNo, m -> m));
+
+        // --- 3. CDECIM 배치 조회 ---
+        List<Cdecim> allDecisions = cdecimRepository.findByDcdMngNoInOrderByDcdSqnAsc(apfMngNos);
+        Map<String, List<Cdecim>> decisionMap = allDecisions.stream()
+                .collect(Collectors.groupingBy(Cdecim::getDcdMngNo));
+
+        // --- 4. 부서코드·사원번호 수집 ---
+        Set<String> orgCodes = new java.util.HashSet<>();
+        Set<String> userEnos = new java.util.HashSet<>();
+        for (ProjectDto.Response r : responses) {
+            if (r.getItDpm() != null && !r.getItDpm().isEmpty()) orgCodes.add(r.getItDpm());
+            if (r.getSvnDpm() != null && !r.getSvnDpm().isEmpty()) orgCodes.add(r.getSvnDpm());
+            if (r.getItDpmCgpr() != null && !r.getItDpmCgpr().isEmpty()) userEnos.add(r.getItDpmCgpr());
+            if (r.getItDpmTlr() != null && !r.getItDpmTlr().isEmpty()) userEnos.add(r.getItDpmTlr());
+            if (r.getSvnDpmCgpr() != null && !r.getSvnDpmCgpr().isEmpty()) userEnos.add(r.getSvnDpmCgpr());
+            if (r.getSvnDpmTlr() != null && !r.getSvnDpmTlr().isEmpty()) userEnos.add(r.getSvnDpmTlr());
+        }
+
+        // --- 5. 부서명·사용자명 배치 조회 ---
+        Map<String, String> orgNameMap = corgnIRepository.findAllById(orgCodes).stream()
+                .collect(Collectors.toMap(CorgnI::getPrlmOgzCCone, CorgnI::getBbrNm));
+        Map<String, String> userNameMap = cuserIRepository.findAllById(userEnos).stream()
+                .collect(Collectors.toMap(CuserI::getEno, CuserI::getUsrNm));
+
+        // --- 6. 응답 DTO에 일괄 주입 ---
+        for (int i = 0; i < projects.size(); i++) {
+            Bprojm project = projects.get(i);
+            ProjectDto.Response response = responses.get(i);
+
+            Cappla cappla = latestCappla.get(project.getPrjMngNo());
+            if (cappla != null) {
+                response.setApfMngNo(cappla.getApfMngNo());
+                Capplm capplm = capplmMap.get(cappla.getApfMngNo());
+                if (capplm != null) {
+                    response.setApfSts(capplm.getApfSts());
+                    List<Cdecim> decisions = decisionMap.getOrDefault(cappla.getApfMngNo(), List.of());
+                    response.setApplicationInfo(ApplicationInfoDto.fromEntities(capplm, decisions));
+                }
+            }
+
+            if (response.getItDpm() != null) response.setItDpmNm(orgNameMap.get(response.getItDpm()));
+            if (response.getSvnDpm() != null) response.setSvnDpmNm(orgNameMap.get(response.getSvnDpm()));
+            if (response.getItDpmCgpr() != null) response.setItDpmCgprNm(userNameMap.get(response.getItDpmCgpr()));
+            if (response.getItDpmTlr() != null) response.setItDpmTlrNm(userNameMap.get(response.getItDpmTlr()));
+            if (response.getSvnDpmCgpr() != null) response.setSvnDpmCgprNm(userNameMap.get(response.getSvnDpmCgpr()));
+            if (response.getSvnDpmTlr() != null) response.setSvnDpmTlrNm(userNameMap.get(response.getSvnDpmTlr()));
+
+            setBudgetSummary(response, project.getPrjMngNo(), project.getPrjSno());
+        }
+    }
+
     private void setApplicationInfo(ProjectDto.Response response, String prjMngNo, Integer prjSno) {
         // BPROJM 테이블 코드와 프로젝트 관리번호/순번으로 연결된 신청서 목록 조회 (최신순)
         List<com.kdb.it.common.approval.entity.Cappla> capplas = capplaRepository
@@ -652,44 +740,80 @@ public class ProjectService {
      * 품목 목록으로부터 자본예산/일반관리비 합계를 계산하여 응답 DTO에 설정
      *
      * <p>
-     * 자본예산(assetBg): gclDtt가 "개발비", "기계장치", "기타무형자산"인 품목의 gclAmt 합계
+     * 자본예���(assetBg): 품목구분(gclDtt)이 공통코드 코드값구분 IOE_CPIT에 해당하는 품목의 gclAmt 합계
      * </p>
      * <p>
-     * 일반관리비(costBg): gclDtt가 "전산임차료", "전산제비"인 품목의 gclAmt 합계
+     * 일반관리비(costBg): 품목구분(gclDtt)이 공통코드 코드값구분 IOE_IDR, IOE_SEVS, IOE_XPN, IOE_LEAFE에 해당하는 품목의 gclAmt 합계
      * </p>
      *
-     * @param response 예산 합계를 설정할 응답 DTO
+     * @param response 예산 ���계를 설정할 응답 DTO
      * @param bitemms  합계 계산 대상 품목 목록
      */
     private void setBudgetSummaryFromItems(ProjectDto.Response response,
             List<com.kdb.it.domain.budget.project.entity.Bitemm> bitemms) {
-        // 자본예산 대상 품목구분
-        java.util.Set<String> assetTypes = java.util.Set.of("개발비", "기계장치", "기타무형자산");
-        // 일반관리비 대상 품목구분
-        java.util.Set<String> costTypes = java.util.Set.of("전산임차료", "전산제비");
+        // 공통코드에서 자본예산 대상 비목코드 조회 (cttTp = IOE_CPIT) — 캐시 적용
+        List<com.kdb.it.common.code.entity.Ccodem> assetCodes = codeService.findCodeEntitiesByCttTp("IOE_CPIT");
+        java.util.Set<String> assetTypes = assetCodes.stream()
+                .map(com.kdb.it.common.code.entity.Ccodem::getCdId)
+                .collect(java.util.stream.Collectors.toSet());
 
-        // 자본예산 합계 계산 (gclAmt × xcr, xcr이 null이면 1로 간주)
-        java.math.BigDecimal assetBg = bitemms.stream()
-                .filter(item -> item.getGclDtt() != null && assetTypes.contains(item.getGclDtt()))
-                .filter(item -> item.getGclAmt() != null)
-                .map(item -> {
-                    java.math.BigDecimal xcr = item.getXcr() != null ? item.getXcr() : java.math.BigDecimal.ONE;
+        // 자본예산 비목코드를 코드설명(cdDes) 기준으로 세부 분류 (개발비/기계장치/기타무형자산)
+        java.util.Map<String, java.util.Set<String>> assetSubTypes = assetCodes.stream()
+                .collect(java.util.stream.Collectors.groupingBy(
+                        c -> c.getCdDes() != null ? c.getCdDes() : "",
+                        java.util.stream.Collectors.mapping(
+                                com.kdb.it.common.code.entity.Ccodem::getCdId,
+                                java.util.stream.Collectors.toSet())));
+        java.util.Set<String> devTypes = assetSubTypes.getOrDefault("개발비", java.util.Collections.emptySet());
+        java.util.Set<String> machTypes = assetSubTypes.getOrDefault("기계장치", java.util.Collections.emptySet());
+        java.util.Set<String> intanTypes = assetSubTypes.getOrDefault("기타무형자산", java.util.Collections.emptySet());
+
+        // 공통코드에서 일반관리비 대상 비목코드(cdId) 조회 (cttTp = IOE_IDR, IOE_SEVS, IOE_XPN, IOE_LEAFE) — 캐시 적용
+        java.util.Set<String> costTypes = java.util.stream.Stream.of("IOE_IDR", "IOE_SEVS", "IOE_XPN", "IOE_LEAFE")
+                .flatMap(cttTp -> codeService.findCodeEntitiesByCttTp(cttTp).stream())
+                .map(com.kdb.it.common.code.entity.Ccodem::getCdId)
+                .collect(java.util.stream.Collectors.toSet());
+
+        // 품목별 금액 계산 헬퍼 (gclAmt × xcr, xcr이 null이거나 0이면 1로 간주)
+        java.util.function.Function<com.kdb.it.domain.budget.project.entity.Bitemm, java.math.BigDecimal> calcAmt =
+                item -> {
+                    java.math.BigDecimal xcr = (item.getXcr() != null && item.getXcr().compareTo(java.math.BigDecimal.ZERO) != 0)
+                            ? item.getXcr() : java.math.BigDecimal.ONE;
                     return item.getGclAmt().multiply(xcr);
-                })
+                };
+
+        // 유효한 품목만 필터링 (gclDtt, gclAmt가 null이 아닌 항목)
+        List<com.kdb.it.domain.budget.project.entity.Bitemm> validItems = bitemms.stream()
+                .filter(item -> item.getGclDtt() != null && item.getGclAmt() != null)
+                .collect(java.util.stream.Collectors.toList());
+
+        // 자본예산 합계 계산
+        java.math.BigDecimal assetBg = validItems.stream()
+                .filter(item -> assetTypes.contains(item.getGclDtt()))
+                .map(calcAmt)
                 .reduce(java.math.BigDecimal.ZERO, java.math.BigDecimal::add);
 
-        // 일반관리비 합계 계산 (gclAmt × xcr, xcr이 null이면 1로 간주)
-        java.math.BigDecimal costBg = bitemms.stream()
-                .filter(item -> item.getGclDtt() != null && costTypes.contains(item.getGclDtt()))
-                .filter(item -> item.getGclAmt() != null)
-                .map(item -> {
-                    java.math.BigDecimal xcr = item.getXcr() != null ? item.getXcr() : java.math.BigDecimal.ONE;
-                    return item.getGclAmt().multiply(xcr);
-                })
+        // 자본예산 세부 분류 합계 계산
+        java.math.BigDecimal devBg = validItems.stream()
+                .filter(item -> devTypes.contains(item.getGclDtt()))
+                .map(calcAmt)
+                .reduce(java.math.BigDecimal.ZERO, java.math.BigDecimal::add);
+        java.math.BigDecimal machBg = validItems.stream()
+                .filter(item -> machTypes.contains(item.getGclDtt()))
+                .map(calcAmt)
+                .reduce(java.math.BigDecimal.ZERO, java.math.BigDecimal::add);
+        java.math.BigDecimal intanBg = validItems.stream()
+                .filter(item -> intanTypes.contains(item.getGclDtt()))
+                .map(calcAmt)
                 .reduce(java.math.BigDecimal.ZERO, java.math.BigDecimal::add);
 
-        response.setAssetBg(assetBg);
-        response.setCostBg(costBg);
+        // 일반관리비 합계 계산
+        java.math.BigDecimal costBg = validItems.stream()
+                .filter(item -> costTypes.contains(item.getGclDtt()))
+                .map(calcAmt)
+                .reduce(java.math.BigDecimal.ZERO, java.math.BigDecimal::add);
+
+        response.setBudgetAmounts(assetBg, devBg, machBg, intanBg, costBg);
     }
 
     /**
